[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dcmget"
version = "3.4.1"
description = "Offline LAN Web workstation for DCMTK C-MOVE downloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=44,<47",
  "fastapi>=0.139.2,<0.140",
  "filelock>=3.16,<4",
  "nicegui>=3.14,<3.15",
  "pydicom>=3.0,<4",
  "pynetdicom>=3.0,<4",
  "psutil>=6.1,<8",
  "uvicorn>=0.51,<0.52",
]

[project.scripts]
dcmget = "DICOM_download_script:main"
dcmget-ui = "DICOM_download_ui:main"

[tool.setuptools]
packages = ["dcmget"]
py-modules = ["DICOM_download_script", "DICOM_download_ui"]

[tool.setuptools.package-data]
dcmget = ["CHANGELOG.md", "webui/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["integration: requires local DCMTK and opens loopback DICOM ports"]
